- Added Starting example for class editor - Fixed Datagrid layout problem in Chrome - More Component Page Fixes

--- a/sass/controls/_datagrid.scss
+++ b/sass/controls/_datagrid.scss
@@ -65,7 +65,7 @@ $datagrid-header-short-height: 32px;
   @include font-size(14);
   border: 0;
   border-collapse: collapse;
-  height: 100%;
+  //height: 100%;
   min-width: 100%;
   overflow: hidden;
   //table-layout: fixed; //this lets us resize to lower than content width but it causes layout issues with default col sizes
@@ -934,7 +934,7 @@ html[dir='rtl'] {
       .sort-indicator {
         opacity: 0;
       }
-    }    
+    }
   }
 
   .short-rowheight {
