--- a/sass/controls/_pager.scss
+++ b/sass/controls/_pager.scss
@@ -156,11 +156,11 @@
 
   input {
     @include font-size(14);
-    height: 32px;
+    height: 30px;
     margin: 0 5px;
     padding: 3px 0;
     text-align: center;
-    width: 32px;
+    width: 30px;
   }
 
   .pager-total-pages {
